<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_auto"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/menu_auto" />
    <item
        android:id="@+id/nav_import"
        android:icon="@drawable/ic_import"
        android:title="@string/importa_dati" />
    <item
        android:id="@+id/nav_sync"
        android:icon="@android:drawable/ic_popup_sync"
        android:title="@string/menu_sync" />
    <item
        android:id="@+id/nav_sync_status"
        android:icon="@drawable/ic_sync_connected"
        android:title="@string/menu_sync_status" />
    <item
        android:id="@+id/nav_sync_bluetooth"
        android:icon="@drawable/ic_bluetooth"
        android:title="@string/menu_sync_bluetooth" />
    <item
        android:id="@+id/nav_info"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/menu_info" />
</menu>
